# HotDogBalloon

./: README.md
firmware/: .cproject  .mxproject  .project  CMakeLists.txt  HotDogBalloon.elf.launch  HotDogBalloon.ioc  STM32L051C6TX_FLASH.ld  hotdog_balloon.ioc  mx.scratch  stm32_flash.ld
firmware/Core/Inc/: Balloon.h  Commands.h  Gps.h  Parsing.h  config.h  debug.h  main.h  main.hpp  spi.h  stm32l0xx_hal_conf.h  system_init.h  uart.h
firmware/Core/Src/: Balloon.cpp  Commands.cpp  Gps.cpp  Parsing.cpp  debug.cpp  main.cpp  spi.cpp  stm32l0xx_hal_msp.c  stm32l0xx_it.c  system_init.c  uart.cpp
firmware/Drivers/STM32L0xx_HAL_Driver/Inc/: stm32l0xx_hal.h
firmware/Inc/: stm32l0xx_hal_conf.h
firmware/app_libs/comm/: ISpi.hpp  ISpiRegDev.hpp  I_I2C.hpp  STM32FIFOUART.cpp  STM32FIFOUART.h  STM32Spi.cpp  STM32Spi.hpp  STM32_I2C.cpp  STM32_I2C.hpp  SemtechSpiDev.cpp  SemtechSpiDev.hpp
firmware/app_libs/extflash/: AT25SF041.cpp  AT25SF041.h
firmware/app_libs/general/: DataRef.hpp  IOutputPin.hpp  STM32OutputPin.cpp  STM32OutputPin.hpp
firmware/app_libs/general/aes/: aes128.c  aes128.h  cmac.c  cmac.h
firmware/app_libs/semtech/: LoRaWANPacketGen.cpp  LoRaWANPacketGen.hpp  SX1276_LoRa.cpp  SX1276_LoRa.hpp
firmware/app_libs/sensors/: Bar_MS5637.cpp  Bar_MS5637.hpp  Temp_PCT2075.cpp  Temp_PCT2075.hpp
firmware/include/: MainApp.hpp  main.h
firmware/lib/Utils/: DataRef.cpp  DataRef.hpp  ICryptoContext.hpp  ITask.hpp
firmware/lib/communication/: SX1276_LoRa.cpp  SX1276_LoRa.hpp  Semtech126xSpiDev.cpp  Semtech126xSpiDev.hpp  Semtech127xSpiDev.cpp  Semtech127xSpiDev.hpp  SemtechSpiDev.cpp  SemtechSpiDev.hpp  sx1276_regs.h
firmware/lib/network/: LoRaWANStack.cpp  LoRaWANStack.hpp
firmware/lib/system/: IInputPin.hpp  IOutputPin.hpp  ISpi.hpp  ISpiRegDev.hpp
firmware/src/: MainApp.cpp  main.c  main.cpp  stm32l0xx_hal_msp.c  stm32l0xx_it.c  tiny_printf.c
hw/kicad_project/: fp-info-cache  picoballoon.kicad_pcb  picoballoon.kicad_pcb-bak  picoballoon.net  picoballoon.pro  picoballoon.sch  picoballoon.sch-bak
hw/kicad_project/export/: picoballoon-B_Cu.gbr  picoballoon-B_Mask.gbr  picoballoon-B_SilkS.gbr  picoballoon-Edge_Cuts.gbr  picoballoon-F_Cu.gbr  picoballoon-F_Mask.gbr  picoballoon-F_SilkS.gbr  picoballoon-NPTH-drl_map.gbr  picoballoon-NPTH.drl  picoballoon-PTH-drl_map.gbr  picoballoon-PTH.drl
hw/kicad_project/kamtar.pretty/: DBG_CONN.kicad_mod  HOPERF_RFM9XW_SMD.kicad_mod  Inductor_2520.kicad_mod  M830120.kicad_mod  MS5637.kicad_mod  SIM28ML.kicad_mod  ufl.kicad_mod
